<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last"
            android:layout_marginStart="24dp"
            android:textSize="17sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/time_last_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="15sp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/until"
            android:layout_marginStart="24dp"
            android:textSize="17sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/time_until_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="15sp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permit_app"
            android:layout_marginStart="24dp"
            android:textSize="17sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/app_permitted_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="15sp"
            android:textColor="#000000"/>
    </LinearLayout>


</ScrollView>