<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <RelativeLayout
                android:id="@+id/timeBundle"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:id="@+id/title_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/last"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/pickers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_time"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            android:textColor="#000000"
                            android:gravity="center"
                            android:text="@string/hour"/>

                        <com.ust.focusmode.widget.NumberPicker
                            android:id="@+id/numPick_h"
                            android:layout_width="match_parent"
                            android:layout_height="270dp"/>

                    </LinearLayout>

                    <View
                        android:background="#000000"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            android:textColor="#000000"
                            android:gravity="center"
                            android:text="@string/min"/>

                        <com.ust.focusmode.widget.NumberPicker
                            android:id="@+id/numPick_m"
                            android:layout_width="match_parent"
                            android:layout_height="270dp"/>

                    </LinearLayout>

                </LinearLayout>


                <RelativeLayout
                    android:layout_below="@id/pickers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/checkbox_forceExit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/forceExit" />

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/help_forceExit"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/ic_info_outline_black_24dp" />

                </RelativeLayout>




            </RelativeLayout>


            <Button
                android:id="@+id/btn_setting_app_permit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/timeBundle"
                android:text="@string/permit"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </RelativeLayout>
    </ScrollView>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/freshData_swipeRefreshLayout"
        android:layout_below="@id/scrollView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/listview_app"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>